# gourami

./: .gitignore  README.md  pyproject.toml
gourami/api/: main.py  routes.py
gourami/cli/: main.py  server.py
gourami/core/: config.py  model.py
gourami/plugins/: __init__.py  anthropic_plugin.py  custom_plugin.py  google_plugin.py  huggingface_plugin.py  llama_plugin.py  mixtral_plugin.py  openai_plugin.py
gourami/utils/: logging.py
